infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  #Number of pods that we want to create running some particular image
  replicas: 1
  #Take a look at all the different pods that have been created
  selector:
    matchLabels:
      #Find all the pods with a label of app client
      app: client
  #Exact configuraiton of Pod
  #This config is applied to pod which is made by Deployment object
  #Pod with label eq 'client'
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: 10eggs/client:latest

---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  #What pod it is going to access to, which is 'comments' from template/meta/label/app
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
