infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  #Number of pods that we want to create running some particular image
  replicas: 1
  #Take a look at all the different pods that have been created
  selector:
    matchLabels:
      #Find all the pods with a label of app event-bus
      app: comments
  #Exact configuraiton of Pod
  #This config is applied to pod which is made by Deployment object
  #Pod with label eq 'event-bus'
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: 10eggs/comments:latest

---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  #What pod it is going to access to, which is 'comments' from template/meta/label/app
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
