infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  #Number of pods that we want to create running some particular image
  replicas: 1
  #Take a look at all the different pods that have been created
  selector:
    matchLabels:
      #Find all the pods with a label of app event-bus
      app: event-bus
  #Exact configuraiton of Pod
  #This config is applied to pod which is made by Deployment object
  #Pod with label eq 'event-bus'
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: 10eggs/event-bus:latest

---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  #What pod it is going to access to, which is 'event-bus' from template/meta/label/app
  selector:
    app: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
