infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  #This entire annotatio section is what is going to help ingress controller understanding we want to feed it some routing routes
  annotations:
   kubernetes.io/ingress.class: nginx
   nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    #Many apps available 
    - host: posts.com
      http:
        #Order from greatest importance to lowest importance
        paths:
          - path: /posts/create
            pathType: Prefix
            backend:
              service:
                name: posts-clusterip-srv
                port:
                  number: 4000
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: query-srv
                port:
                  number: 4002
          - path: /posts/?(.*)/comments
            pathType: Prefix
            backend:
              service:
                name: comments-srv
                port:
                  number: 4001
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
